<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/home_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomePage"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="10dp"
                android:textAlignment="gravity"
                android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="@color/white" />

            <Button
                android:id="@+id/play_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/button_style"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/mock_test"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_name" />

            <Button
                android:id="@+id/practice_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/button_style"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/practice"
                android:textColor="@color/colorPrimary"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/play_button" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/footerEnd"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/get_social_follow_us"
                        android:textAlignment="center"
                        android:textColor="@color/grey"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/facebookIcon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:alpha="0.5"
                        android:contentDescription="@string/facebookicon"
                        android:paddingBottom="14dp"
                        android:paddingTop="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/textView"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        android:src="@drawable/facebook_icon" />

                    <ImageView
                        android:id="@+id/youtube_icon"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="12dp"
                        android:layout_marginStart="12dp"
                        android:alpha="0.5"
                        android:contentDescription="@string/youtubeicon"
                        android:paddingBottom="14dp"
                        android:paddingTop="14dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/facebookIcon"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.0"
                        android:src="@drawable/youtube_icon" />
                </android.support.constraint.ConstraintLayout>

            </LinearLayout>

            <ImageView
                android:id="@+id/user_icon"
                android:layout_width="128dp"
                android:layout_height="128dp"
                android:layout_marginTop="32dp"
                android:contentDescription="@string/useravatar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar"
                android:src="@drawable/ic_17" />

            <TextView
                android:id="@+id/user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/name_resource"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/user_icon" />

            <ImageView
                android:id="@+id/avatar_selector_button"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:clickable="true"
                android:alpha="0.8"
                app:layout_constraintStart_toStartOf="@+id/user_icon"
                app:layout_constraintTop_toTopOf="@+id/user_icon"
                app:srcCompat="@drawable/avatar_selector_button" />


        </android.support.constraint.ConstraintLayout>

    </FrameLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        android:background="@color/navigation"
        app:itemTextColor="@color/white"
        app:itemIconTint="@color/white"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/drawer_menu" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:clickable="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="Powered by PenserLabs©"
                android:textColor="@color/white"
                android:textAlignment="center"
                android:textSize="10dp"
                android:layout_marginBottom="10dp"/>

        </LinearLayout>

    </android.support.design.widget.NavigationView>

</android.support.v4.widget.DrawerLayout>